# Nested-Diff.py

./: .gitignore  .travis.yml  HOWTO.md  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: publish.yaml  tests.yml
nested_diff/: __init__.py  cli.py  diff_tool.py  fmt.py  formatters.py  handlers.py  ndiff.py  patch_tool.py
tests/: common.py  conftest.py  gen_ext_tests.py  test_cli.py  test_custom_containers.py  test_diff.py  test_differ_subclassing.py  test_fmt_html.py  test_fmt_term.py  test_fmt_text.py  test_fmt_text_multiline.py  test_handlers.py  test_internal_methods.py  test_iterator.py  test_objects_internal_methods.py  test_patch.py  test_walker.py
tests/cli/: shared.a.ini  shared.b.ini  shared.custom_tags.a.yaml  shared.custom_tags.b.yaml  shared.dict.a.toml  shared.dict.b.toml  shared.ini.patch.json  shared.multiline.a.json  shared.multiline_strings.json  shared.nan.yaml  shared.stream.a.yaml  shared.stream.b.yaml  shared.text.a.json  shared.text.b.json  shared.txt.patch.json  test_cli.py  test_diff_tool.py  test_diff_tool.test_default_diff_with_tty.exp  test_diff_tool.test_diff_method_kwargs_override.exp  test_diff_tool.test_enable_U_ops.exp  test_diff_tool.test_fallback_ifmt.exp  test_diff_tool.test_html_ofmt.exp  test_diff_tool.test_html_ofmt_opts.exp  test_diff_tool.test_html_ofmt_wrappings.exp  test_diff_tool.test_multiline_context_0.exp  test_diff_tool.test_multiline_default.exp  test_diff_tool.test_multiline_default_term.exp  test_diff_tool.test_plaintext_ifmt.exp  test_diff_tool.test_text_context_0.exp  test_diff_tool.test_text_default.exp  test_diff_tool.test_text_default_term.exp  test_diff_tool.test_text_disabled.exp  test_diff_tool.test_toml_fmt.exp  test_diff_tool.test_trimR_ops.exp  test_diff_tool.test_values_json.exp  test_diff_tool.test_values_none.exp  test_diff_tool.test_values_pprint.exp  test_diff_tool.test_values_repr.exp  test_diff_tool.test_values_yaml.exp  test_diff_tool.test_values_yaml_multiline_strings.exp  (+6 more)
tests/cli/diff_tool/: shared.lists.a.json  shared.lists.b.ini  shared.lists.b.json  shared.lists.b.yaml  test_diff_tool.py  test_diff_tool.test_ini_ifmt.exp  test_diff_tool.test_json_ofmt_opts.exp  test_diff_tool.test_multiline_disabled.exp
tests/cli/ndiff/: shared.lists.a.yaml  test_ndiff.py  test_ndiff.test_output_file.exp
tests/cli/patch_tool/: test_patch_tool.py  test_patch_tool.test_json_ofmt_opts.exp
tests/data/: gen_html_compare.py  gen_standard.py  specific.py  standard.py
tests/data/formatters/: HtmlFormatter.py  TermFormatter.py  TextFormatter.py  __init__.py
tests/ext/: test_0_vs_0.py  test_0_vs_0_noU.py  test_0_vs_1.py  test_0_vs_empty_string.py  test_0_vs_undef.py  test_1_vs_1_as_string.py  test_1_vs_1dot0.py  test_1_vs_minus1.py  test_1dot0_vs_1dot0_as_string.py  test_a_vs_a.py  test_a_vs_b.py  test_deeply_nested_hash_vs_empty_hash.py  test_deeply_nested_hash_vs_empty_hash_trimR.py  test_deeply_nested_list_vs_empty_list.py  test_deeply_nested_list_vs_empty_list_trimR.py  test_deeply_nested_subhash_removed_from_hash.py  test_deeply_nested_subhash_removed_from_hash_trimR.py  test_deeply_nested_sublist_removed_from_list.py  test_deeply_nested_sublist_removed_from_list_trimR.py  test_empty_hash_vs_empty_hash.py  test_empty_hash_vs_empty_hash_noU.py  test_empty_hash_vs_empty_list.py  test_empty_hash_vs_hash_with_one_key.py  test_empty_hash_vs_hash_with_one_key_noA.py  test_empty_list_vs_deeply_nested_list.py  test_empty_list_vs_empty_hash.py  test_empty_list_vs_empty_list.py  test_empty_list_vs_empty_list_noU.py  test_empty_list_vs_list_with_one_item.py  test_empty_list_vs_list_with_one_item_noA.py  test_empty_string_vs_0.py  test_empty_string_vs_undef.py  test_hash_with_one_key_vs_empty_hash.py  test_hash_with_one_key_vs_empty_hash_noR.py  test_hashes_with_one_different_value_noN.py  test_hashes_with_one_different_value_noO.py  test_list_with_one_item_vs_empty_list.py  test_list_with_one_item_vs_empty_list_noR.py  test_lists_LCS_added_items.py  test_lists_LCS_added_items_noU.py  (+67 more)
