[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'nested_diff'
authors = [{name = 'Michael Samoglyadov', email = 'mixas.sr@gmail.com'}]
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = [
    'diff',
    'nested-diff',
    'recursive-diff',
    'nested-data',
    'data-structures',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: File Formats :: JSON',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Testing',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
]
dynamic = ['version', 'description']
dependencies = []
requires-python = '>=3.7'

[project.optional-dependencies]
cli = [
    'pyyaml >= 5.3',
    'tomli >= 1.1.0 ; python_version < "3.11"',
    'tomli-w >= 1.0.0'
]
lint = [
    'darglint',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-ruff',
    'ruff==0.8.2',
]

[project.scripts]
nested_diff = 'nested_diff.diff_tool:App.cli'
nested_patch = 'nested_diff.patch_tool:App.cli'

[project.urls]
Homepage = 'https://github.com/mr-mixas/Nested-Diff.py'
Repository = 'https://github.com/mr-mixas/Nested-Diff.py.git'

[tool.pytest.ini_options]
addopts = [
    '--cov=nested_diff',
    '--cov-fail-under=99',
    '--cov-report=term-missing',
    '--no-cov-on-fail',
    '--ruff',
    '--ruff-format',
    '--verbosity=2',
]
doctest_optionflags = 'NORMALIZE_WHITESPACE'
testpaths = 'nested_diff tests'

[tool.ruff]
extend-exclude = [
    'tests/data/formatters',
    'tests/data/standard.py',
]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
quote-style = 'single'

[tool.ruff.lint]
select = ['ALL']  # IMPORTANT: keep ruff version pinned!
ignore = [
    'ANN',  # TODO: enable
    'EM101',  # Exception must not use a string literal, assign to variable...
    'EM102',  # Exception must not use an f-string literal
    'FBT002',  # TODO: enable
    'PTH',  # ... should be replaced by `Path...
    'SIM105',  # contextlib.suppress is slower than try-except-pass
    'TRY003',  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.extend-per-file-ignores]
'tests/*' = [
    'D',  # docstrings
    'PLR2004',  # Magic value used in comparison...
    'S101',  # Use of `assert`
    'T201',  # `print` found
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.pydocstyle]
convention = 'google'
